changes needed to export to onnx. still broke but good reference

--- a/source/Leatherback/Leatherback/tasks/direct/leatherback/agents/skrl_ppo_cfg.yaml
+++ b/source/Leatherback/Leatherback/tasks/direct/leatherback/agents/skrl_ppo_cfg.yaml
@@ -1,5 +1,5 @@
 seed: 42
-
+empirical_normalization: False
 
 # Models are instantiated using skrl's model instantiator utility
 # https://skrl.readthedocs.io/en/latest/api/utils/model_instantiators.html
